--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,11 @@ Changelog
 2.0 - Unreleased
 ----------------
 
+* Added translations for Show/Hide labels in @@manage-portlets view:
+  label_show_item and label_hide_item. These msgids are shared with 
+  @@manage-viewlets view to show/hide viewlets.
+  [naro]
+
 * Use JS calls to handle show/hide/move actions instead of forcing a page
   reload. Will fall back to old method if JavaScript is not available.
   [esteele]
