--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Changelog
 2.0a3 - Unreleased
 ------------------
 
+* Use the new zope.site package.
+  [hannosch]
 
 2.0a2 - 2009-12-16
 ------------------
