Provide some basic styling for @@manage-viewlets. Stop abusing .portletHeader and .portletItem styles and define our one-off styles inline. Closes #10006 Closes #10178
svn path=/plone.app.viewletmanager/trunk/; revision=34331

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,12 @@ Changelog
 2.0b3 - unreleased
 ------------------
 
+- Provide some basic styling for @@manage-viewlets. Remove the use of
+  .portletHeader and .portletItem styles and define everything inline.
+  Closes http://dev.plone.org/plone/ticket/10006
+  Closes http://dev.plone.org/plone/ticket/10178
+  [esteele]
+  
 - Push @@manage-viewlets css into style_slot instead of css_slot.
   [esteele]
 
