removed duplicated class statement in manage-viewlets.pt to allow cmf.pt    [pilz]
svn path=/plone.app.viewletmanager/trunk/; revision=36660

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ Changelog
 2.0b5 - Unreleased
 ------------------
 
+ - removed duplicated class statement in manage-viewlets.pt to allow cmf.pt
+   [pilz]
+
 2.0b4 - 2010-05-01
 ------------------
 
