Silence `Nothing to import / export.` log messages.
svn path=/plone.app.viewletmanager/trunk/; revision=37829

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,11 @@
 Changelog
 =========
 
-2.0b6 - Unreleased
-------------------
+2.0 - Unreleased
+----------------
+
+- Silence `Nothing to import / export.` log messages.
+  [hannosch]
 
 2.0b5 - 2010-06-03
 ------------------
