fixes #10903 (again :P), when trying to hide viewlets from skins it now actualy does this for all skins registered in portal_skins
svn path=/plone.app.viewletmanager/trunk/; revision=38718

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,7 +3,9 @@ Changelog
 
 2.0.2 - unreleased
 ------------------
-
+- hidding viewlets for * (all) skins was not working
+  Closes http://dev.plone.org/plone/ticket/10903
+  [garbas]
 
 2.0.1 - 2010-07-18
 ------------------
