--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,10 @@ Changelog
 
 2.0.2 - unreleased
 ------------------
+
+- Depend on ``Products.CMFPlone`` instead of ``Plone``.
+  [elro]
+
 - hidding viewlets for * (all) skins was not working
   Closes http://dev.plone.org/plone/ticket/10903
   [garbas]
