--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,9 @@ Changelog
 - Depend on ``Products.CMFPlone`` instead of ``Plone``.
   [elro]
 
+- Explicitly unregister IViewletSettingsStorage utility to prevent test bleed.
+  [esteele, cah190]
+  
 2.0.1 - 2010-07-18
 ------------------
 
