--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+2.0.3 - Unreleased
+------------------
+
 2.0.2 - 2011-01-11
 ------------------
 - Depend on ``Products.CMFPlone`` instead of ``Plone``.
