- Hiding viewlets for ``skinname="*"`` was not working properly. +  Add ``plone.app.vocabularies`` as dependency   Closes http://dev.plone.org/plone/ticket/10903
svn path=/plone.app.viewletmanager/trunk/; revision=48934

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,13 @@ Changelog
 2.0.3 - Unreleased
 ------------------
 
+- Hiding viewlets for ``skinname="*"`` was not working properly.
+  Closes http://dev.plone.org/plone/ticket/10903
+  [garbas, WouterVH]
+
+- Add ``plone.app.vocabularies`` as dependency to get the list of existing skins.
+  [WouterVH]
+
 - Add MANIFEST.in.
   [WouterVH]
 
